--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -230,9 +230,9 @@
                                   <li class="menu-item" *ngIf="loggedIn" >
                                       <a [routerLink]="['/order-history']">My Orders</a>
                                   </li>
-                                  <li class="menu-item" *ngIf="loggedIn" >
+                                  <!-- <li class="menu-item" *ngIf="loggedIn" >
                                       <a [routerLink]="['/checkout']">Checkout</a>
-                                  </li>
+                                  </li> -->
                                   <li class="menu-item" *ngIf="!loggedIn" >
                                       <a [routerLink]="['/registration']">Register</a>
                                   </li>
