--- a/src/app/product/products.component.html
+++ b/src/app/product/products.component.html
@@ -318,7 +318,7 @@
                            <option value="asc">Name, A to Z</option>
                            <option value="desc">Name, Z to A</option>
                            <option value="low">Price, low to high</option>
-                           <option value="hign">Price, high to low</option>
+                           <option value="high">Price, high to low</option>
                         </select>
                      </div>
                   </div>
