--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -8,7 +8,7 @@
     width: 100%!important;
 }
 /deep/.owl-carousel .owl-nav button.owl-prev{
-    left:0!important;
+    left:25px!important;
  }
 /deep/.owl-carousel .owl-nav button.owl-next, /deep/.owl-carousel .owl-nav button.owl-prev, /deep/.owl-carousel button.owl-dot {
     background: 0 0!important;
@@ -17,7 +17,7 @@
     padding: 0!important ;
     font: inherit!important;
     position: absolute!important;
-    right:0px;
+    right:25px;
 }
 /deep/.owl-nav button span {
     line-height: 0px!important;
@@ -34,12 +34,12 @@
     position: absolute!important;
 } */
 /deep/ .owl-next span{
-    /* position: absolute!important; */
-    right: -15px!important;
+    position: absolute!important;
+    right:0px!important;
 }
 /deep/ .owl-prev span{
     position: absolute!important;
-    left: -25px!important;
+    left:0px!important;
 }
 .img_css_amaze{
     width:208px!important;
